# dnl-f1-training

./: .dockerignore  .gcloudignore  .gitignore  AGENTS.md  Dockerfile  README.md  README_DNL.md  pre_encode.py  pyproject.toml  setup.py  train.py
.github/workflows/: ci.yml
ci/: Dockerfile.context-verify
docs/decisions/: 001-python-and-package-management.md  002-pre-encoded-latent-training.md
models/foundation1_3s/: model_config_3s.json
requirements/: augment.txt  base.txt  encode.txt  eval.txt  smoke.txt  train.txt
scripts/: bootstrap_vertex_inline.sh  bootstrap_vm.sh  gcp_train_f1_3s.sh  setup_python_env.sh  smoke_test_gcs.py  unwrap_checkpoint.sh  vertex_job_f1_3s.yaml  vertex_job_pre_encode.yaml
stable_audio_tools/configs/dataset_configs/: gcs_f1_3s.json  gcs_f1_3s_pre_encode.json  pre_encoded_f1_3s.json
stable_audio_tools/data/: dataset.py  gcs_dataset.py
stable_audio_tools/models/: diffusion.py  utils.py
stable_audio_tools/training/: clearml_tracking.py
tests/: conftest.py  test_docker_build.py  test_dockerfile.py  test_requirements.py  test_scripts.py  test_vertex_job_contract.py  test_yaml_configs.py
